--- a/external.html
+++ b/external.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: "Sono", sans-serif;
-            background-color: #f8f9fa;
+            background-color: #515252;
             display: flex;
             justify-content: center;
             align-items: center;
